setup demo live script.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -106,5 +107,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+*.jpg
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,matlab
